Fill Java/JVM/Memory